--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-179.5KB/s(Youtube:不良林), server: 5.183.176.80, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-372.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇨🇳 中国-765.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-417.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-231.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇭🇰 香港-754.1KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-598.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-401.7KB/s(Youtube:不良林), server: 194.156.231.251, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-955.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
