--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-417.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-231.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇭🇰 香港-754.1KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇦 加拿大-598.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-445.4KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-381.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-212.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-401.7KB/s(Youtube:不良林), server: 194.156.231.251, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-955.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-362.4KB/s(Youtube:不良林), server: 194.156.231.251, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-417.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-754.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
