--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.21MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-179.5KB/s(Youtube:不良林), server: 5.183.176.80, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-391.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-640.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-3.64MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-483.6KB/s(Youtube:不良林), server: 5.183.176.84, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-557.6KB/s(Youtube:不良林), server: 5.183.176.81, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-401.0KB/s(Youtube:不良林), server: 5.183.176.80, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-345.4KB/s(Youtube:不良林), server: 194.156.231.251, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-483.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-557.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-483.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-557.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-483.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-557.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-483.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-557.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-483.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-557.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-483.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-557.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-483.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-557.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-401.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
